Fix: text align and remove unnecessary imports

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -314,7 +314,7 @@ body {
   }
 
   .description {
-    text-align: justify;
+    text-align: left;
     font-size: 1.125rem;
     overflow-wrap: break-word;
     word-wrap: break-word;
